--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
         </section>
       </div>
     </main>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
